<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Strings -->
    <string name="app_name">Punto GPS Voz</string>
    <string name="radiobutton_web">Web search</string>
    <string name="radiobutton_free">Free form</string>
    <string name="instructions_langmodel">Choose a language model</string>
    <string name="instructions_numresults">Choose the maximum number of results</string>
    <string name="speechbtn">Press the button to speak</string>
    <string name="activar">Activar</string>
    <string name="cancelar">No activar</string>
    <string name="titulo_dialogo">GPS desactivado</string>
    <string name="mensaje_dialogo">El GPS está desactivado. ¿Desea activarlo ahora?</string>
    <string name="btn_GPS">Lanzar GPS</string>
    <string name="btn_Lat">Establecer Latitud</string>
    <string name="btn_Lon">Establecer Longitud</string>
    <string name="txt_Lat">Latitud:</string>
    <string name="txt_Lon">Longitud:</string>

</resources>