<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.puntogpsvoz_josedelgado_joseangelsegura.MainActivity" >

    <Button
        android:id="@+id/Boton_GPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:text="@string/btn_GPS"
        android:onClick="lanzarGPS" />

    <TextView
        android:id="@+id/txt_Lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="33dp"
        android:text="@string/txt_Lat"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/val_Lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Boton_Longitud"
        android:layout_alignLeft="@+id/val_Lat"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/val_Lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/Boton_GPS"
        android:layout_below="@+id/txt_Lat"
        android:layout_marginTop="19dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/Boton_Longitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Boton_GPS"
        android:layout_alignLeft="@+id/Boton_Latitud"
        android:layout_marginBottom="42dp"
        android:onClick="reconocerLongitud"
        android:text="@string/btn_Lon" />

    <TextView
        android:id="@+id/txt_Lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_Lat"
        android:layout_below="@+id/Boton_Latitud"
        android:layout_marginTop="22dp"
        android:text="@string/txt_Lon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/Boton_Latitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/val_Lat"
        android:layout_centerHorizontal="true"
        android:onClick="reconocerLatitud"
        android:text="@string/btn_Lat" />

</RelativeLayout>